Ccambio en items

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
   </div>
 
-  
+
   <div id="carouselExample" class="carousel slide mt-5">
     <div class="carousel-inner">
       <div class="carousel-item active">
@@ -225,7 +225,7 @@
           <p class="text-center">Nimrodel Significa “dama de la cueva blanca”. Fue una elfa silvana que vivió
             durante la Tercera Edad del Sol en el bosque de Lothlórien. En honor a su nombre, se acuña
             Nimrodel al río que nace en las Montañas Nubladas.</p>
-          <img src="assets/img/IMG2.jpg" alt="" class="d-block mx-auto" width="600px">
+          <img src="assets/img/IMG2.jpg" alt="" class="d-block mx-auto">
         </div>
         <div class="carousel-item">
           <p class="text-center">Nimrodel Pub Restaurant es un oasis de calma y diversión, lleno de rincones acogedores
@@ -238,7 +238,7 @@
             llevarán a un mágico mundo.</p>
         </div>
         <div class="carousel-item">
-          <img src="assets/img/IMG1.jpg" alt="" class="d-block mx-auto" width="400px">
+          <img src="assets/img/IMG1.jpg" alt="" class="d-block mx-auto">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselnosotros" data-bs-slide="prev">
@@ -251,7 +251,7 @@
       </button>
     </div>
   </div>
-  
+
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"
     integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
   <script src="Assets/js/script.js"></script>
